0.12.24 Dexember xx, 2022
- use same method as Autocat3 for resering PubInfo
- in generated header, render each creator on a separate line
- don't set exclude_encodings param for html5lib parser
- improve info log message for parser selection

0.12.23 November 29, 2022
- fix the fix to the whitespace around `<br>` to fix issue with 'None' appearing in EPUBS
- switch to `html5lib` for files likely to be html5 (not xml). This has the effect of closing any tags for empty elements not closed in the source file. Much slower than the C-based parsers used for XHTML, but probably not a big hit because results are cached.

0.12.22 November 28, 2022
- add whitespace to `<br>` elements in headers. tidy used to put whitespace around `<br>` elements. PPs relied on this behavior, so we're stuck.
- add pagebreak css for EPUB2 boilerplate
- changed log level for empty img[alt] from ERROR to WARNING
- fix replacement css for table[align] and img[align]
- fix incorrect css for bgcolor attributes
- fix incorrect css for clear='all'
- changed the approach to replacing `<center>` - there's additional css for tables in a center element.
- the HTML void element `wbr` is not recognized by lxml. for this reason, we had to
    - switch to `html.parser` for files likely to be html5 (not xml)
    - we're using `html.parser` for files that don't set `xmlns` attribute and don't declare a PUBLIC doctype `-//W3C//DTD`, which should be any non-xml HTML5 file. Only 151 files in our collection satisfy this criterion so far.
    - explicitly remove stray end tags: `</wbr>` after writing to out bytes for the html5 file
- add svg cover from #132
- remove 'svg' property for stand-alone svg files; this property is meant for files that embed svg.

0.12.21 November 1, 2022
- add logging for empty img[alt] attributes

0.12.20 October 23, 2022
- don't wipe source credit if there's an update credit from the db.
- require libgutenberg>=0.10.8

0.12.19 October 17, 2022