@@ -3,6 +3,7 @@
 - in generated header, render each creator on a separate line
 - don't set exclude_encodings param for html5lib parser
 - improve info log message for parser selection
+- header removal was messed up by language tags in the marker. removed them
 
 0.12.23 November 29, 2022
 - fix the fix to the whitespace around `<br>` to fix issue with 'None' appearing in EPUBS
